Add more missing references in the subprojects.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ASTtoIL/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ASTtoIL/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.MultiModel.ASTtoIL
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   # Externals
