--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/src/CMakeLists.txt
@@ -2,6 +2,9 @@ csharp_add_library(
   SolidOpt.Services.Transformations.MultiModel.ILtoCFG
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
+  # Externals
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
