--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
@@ -3,5 +3,8 @@ csharp_add_library(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.CallGraph.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  # Externals
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ###
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
