Currently we don't support build versions. Set the build version to 0

--- a/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
+++ b/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
@@ -20,11 +20,11 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyCopyright("Copyright (c) 2009-@SolidOpt_LastYear@ SolidOpt.org")]
 [assembly: AssemblyDescription("@PROJECT_NAME@ Optimization Framework")]
 [assembly: AssemblyCompany("SolidOpt.org")]
-[assembly: AssemblyFileVersion("@SolidOpt_Major@.@SolidOpt_Minor@.@SolidOpt_Revision@")]
+[assembly: AssemblyFileVersion("@SolidOpt_Major@.@SolidOpt_Minor@.0.@SolidOpt_Revision@")]
 [assembly: AssemblyCulture("")]
 [assembly: AssemblyTrademark("@PROJECT_NAME@")]
 [assembly: AssemblyProduct("@PROJECT_NAME@")]
-[assembly: AssemblyInformationalVersion("@SolidOpt_Major@.@SolidOpt_Minor@.@SolidOpt_Revision@")]
+[assembly: AssemblyInformationalVersion("@SolidOpt_Major@.@SolidOpt_Minor@.0.@SolidOpt_Revision@")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyName("")]
