Replace tabs with spaces in templates and project generator. Fix: Do not force values for cmake params CSHARP_FRAMEWORK_VERSION and CSHARP_FRAMEWORK_PROFILE

--- a/SolidOpt/trunk/cmake/ProjectName-v11.csproj.in
+++ b/SolidOpt/trunk/cmake/ProjectName-v11.csproj.in
@@ -18,16 +18,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-<!--    <ProjectGuid>{18248EA1-C1A4-4FF4-AE89-BA3C4E0F1DA5}</ProjectGuid> -->
     <ProjectGuid>{@VAR_Project_GUID@}</ProjectGuid>
-<!--    <OutputType>Library</OutputType> -->
     <OutputType>@VAR_Project_OutputType@</OutputType>
     <RootNamespace>@VAR_Project_DefaultNamespace@</RootNamespace>
     <AssemblyName>@VAR_Project_AssemblyName@</AssemblyName>
-<!--    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion> -->
     <TargetFrameworkVersion>@VAR_Project_TargetFrameworkVersion@</TargetFrameworkVersion>
-<!--    <TargetFrameworkProfile>Client</TargetFrameworkProfile> -->
     <TargetFrameworkProfile>@VAR_Project_TargetFrameworkProfile@</TargetFrameworkProfile>
+    <BaseDirectory>@VAR_Project_BaseDirectory@</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
