--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/CFG/DeadCodeElimination/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/CFG/DeadCodeElimination/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.CFG.DeadCodeElimination
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
