--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
@@ -2,6 +2,9 @@ csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.AST.ConstantPropagation
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
+  # Monodevelop 2.8 compatibility
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
