--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/NopRemove/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.IL.NopRemove
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
+  # Monodevelop 2.8 compatibility
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.Rocks.dll
