Move MSBuild specific cmake functionality in separate module. Move the logic of building of externals in it's own vendor's folder. It is done now at build-time and not in configuration time.

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -22,6 +22,10 @@ set(FORCE_VISUAL_STUDIO_10_SLN OFF CACHE BOOL "Force generation of SLN.")
 find_package( CSharp REQUIRED )
 include( ${CSHARP_USE_FILE} )
 
+# Find MSBuild
+find_package( MSBuild REQUIRED )
+include( ${MSBuild_USE_FILE} )
+
 # Setup build locations.
 if(NOT CMAKE_RUNTIME_OUTPUT_DIR)
   set(CMAKE_RUNTIME_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
