Implement ITransform. This is part of larger interface restructure. Right now we have ICompile and IDecompile, which is not very helpful for the test suite for example. There nobody cares about what the transformer does. For now we will forward ITransform.Transform to either Compile or Decompile or Optimize. Later we will just have Transform.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
@@ -46,6 +46,10 @@
       <Project>{83DD7E12-A705-4DBA-9D71-09C8973D9382}</Project>
       <Name>nunit.framework.dll</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SolidOpt.Services.Transformations.csproj">
+      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
