Split and document the test directive parser and lexer.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Compile Include="test\BaseTestFixture.cs" />
     <Compile Include="test\TestCaseDirective.cs" />
+    <Compile Include="test\TestCaseDirectiveParser.cs" />
+    <Compile Include="test\DirectiveLexer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\vendors\Mono.Cecil\Mono.Cecil.csproj">
