Configure and place BuildInfo.cs at the right spot.

--- a/SolidOpt/trunk/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(vendors)
 add_subdirectory(Services)
 add_subdirectory(Core) # Core depends on Services
+add_subdirectory(BuildInformation)
