* Implemented new csharp_add_test_library macro for the purpose of compiling libs that support our test infrastructure. * Support of testing of CFGtoTAC. * Alphabetical ordering of references. * AssemblyInfo included in the build.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/test/CMakeLists.txt
@@ -1,13 +1,12 @@
-csharp_add_library(
+csharp_add_test_library(
   SolidOpt.Services.Transformations.MultiModel.ILtoCG.Test
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.Test.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.CallGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.ILtoCG.dll
-
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.Test.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/nunit.framework.dll
   ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  #${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
