Follow the common project structure for consistency.

--- a/SolidOpt/trunk/src/BuildInformation/BuildInformation.csproj
+++ b/SolidOpt/trunk/src/BuildInformation/BuildInformation.csproj
@@ -31,6 +31,9 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="BuildInfo.cs" />
+    <Folder Include="src\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="src\BuildInfo.cs" />
   </ItemGroup>
 </Project>
