Exctract out some more test and put it in the right optimization method test suite.

--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/SolidOpt.Services.MethodInline.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/SolidOpt.Services.MethodInline.Test.csproj
@@ -69,5 +69,11 @@
   <ItemGroup>
     <None Include="test\TestCases\SimpleInline.cs" />
     <None Include="test\TestCases\SimpleInline.cs.ast" />
+    <None Include="test\TestCases\Triangle.cs" />
+    <None Include="test\TestCases\Triangle.cs.ast" />
+    <None Include="test\TestCases\NestedInline.cs.ast" />
+    <None Include="test\TestCases\NestedInline.cs" />
+    <None Include="test\TestCases\Loops.cs.ast" />
+    <None Include="test\TestCases\Loops.cs" />
   </ItemGroup>
 </Project>
