--- a/SolidOpt/trunk/src/Services/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/CMakeLists.txt
@@ -4,5 +4,6 @@ csharp_add_library(
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 
+add_subdirectory(Loader)
 add_subdirectory(Subsystems)
 add_subdirectory(Transformations)
