--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.csproj
@@ -35,6 +35,7 @@
     <Compile Include="CompilationPipeline.cs" />
     <Compile Include="DecompilationPipeline.cs" />
     <Compile Include="DecompilationStep.cs" />
+    <Compile Include="TransformationGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Core">
