--- a/SolidOpt/trunk/src/BuildInformation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/BuildInformation/src/CMakeLists.txt
@@ -1,3 +1,9 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 configure_file(
   ${CMAKE_MODULE_PATH}/BuildInfo.cs.in
   ${CMAKE_CURRENT_SOURCE_DIR}/BuildInfo.cs
