--- a/SolidOpt/trunk/src/Services/Subsystems/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Subsystems/CMakeLists.txt
@@ -1,3 +1,9 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 add_subdirectory(Cache)
 add_subdirectory(Configurator)
 add_subdirectory(HetAccess)
