--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/CMakeLists.txt
@@ -1,3 +1,9 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 add_subdirectory(AbstractSyntacticTree)
 add_subdirectory(CallGraph)
 add_subdirectory(ControlFlowGraph)
