--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/CallGraph/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/CallGraph/src/CMakeLists.txt
@@ -1,3 +1,9 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 csharp_add_library(
   SolidOpt.Services.Transformations.CodeModel.CallGraph
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
