--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/CMakeLists.txt
@@ -1,2 +1,8 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 add_subdirectory(src)
 add_subdirectory(test)
