--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/CMakeLists.txt
@@ -1,3 +1,9 @@
+##
+## $Id$
+## It is part of the SolidOpt Copyright Policy (see Copyright.txt)
+## For further details see the nearest License.txt
+##
+
 add_subdirectory(MethodInline)
 add_subdirectory(NopRemove)
 add_subdirectory(OverflowArithmeticRemove)
