--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/CMakeLists.txt
@@ -10,8 +10,13 @@ csharp_add_test_library(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.ILtoAST.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.Test.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.AST.MethodInline.dll
+  # Monodevelop 2.8 compatibility
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/nunit.framework.dll
   ###
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
