Fixes of all cmake files (to use csharp_add_dependencies). I forgot to commit them in previous commit.

--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/ThreeAddressCode/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/ThreeAddressCode/src/CMakeLists.txt
@@ -6,8 +6,11 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   )
