--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/CMakeLists.txt
@@ -6,10 +6,13 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.Optimizations
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   )
 
 add_subdirectory(SolidOpt.Services.Optimizations.Annotations) # Many depend on that
