--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/SolidOpt.Services.Optimizations.Annotations/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/SolidOpt.Services.Optimizations.Annotations/src/CMakeLists.txt
@@ -6,7 +6,10 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.Annotations
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.Optimizations.Annotations
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   )
