--- a/SolidOpt/trunk/src/Services/Loader/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Loader/src/CMakeLists.txt
@@ -6,7 +6,10 @@
 
 csharp_add_library(
   SolidOpt.Loader
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Loader
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   )
