--- a/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
@@ -6,9 +6,12 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   )
 
 add_subdirectory(CodeModel)
