--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/src/CMakeLists.txt
@@ -6,6 +6,11 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations.MultiModel.CFGtoTAC
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
@@ -13,7 +18,4 @@ csharp_add_library(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
-  ###
-  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
