--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
@@ -6,6 +6,11 @@
 
 csharp_add_test_library(
   SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.dll
@@ -18,7 +23,4 @@ csharp_add_test_library(
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/nunit.framework.dll
-  ###
-  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
