--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/ConstantPropagation/src/CMakeLists.txt
@@ -6,6 +6,11 @@
 
 csharp_add_library(
   SolidOpt.Services.Transformations.Optimizations.AST.ConstantPropagation
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  )
+csharp_add_dependencies(
+  SolidOpt.Services.Transformations.Optimizations.AST.ConstantPropagation
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.AbstractSyntacticTree.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   # Monodevelop 2.8 compatibility
@@ -14,7 +19,4 @@ csharp_add_library(
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
-  ###
-  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
