--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.IL.MethodInline.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/SolidOpt.Services.IL.MethodInline.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <OutputType>Library</OutputType>
     <RootNamespace>SolidOpt.Services.Transformations.Optimizations.IL.MethodInline</RootNamespace>
-    <AssemblyName>SolidOpt.Services.Transformations.Optimizations.IL.MethodInline</AssemblyName>
+    <AssemblyName>SolidOpt.Services.IL.MethodInline</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -55,15 +55,15 @@
       <Name>Mono.Cecil.Rocks</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SolidOpt.Services.Optimizations.csproj">
-      <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
+      <Project>{CCCC9966-8CEB-4451-8AD4-FE48D7AD04BB}</Project>
       <Name>SolidOpt.Services.Optimizations</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+      <Project>{C41B5FB4-DAE9-4A27-9D15-55109AB79660}</Project>
       <Name>SolidOpt.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+      <Project>{6EA875AD-4277-4EF6-8D5C-03A0995DB7FD}</Project>
       <Name>SolidOpt.Services.Transformations</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SolidOpt.Services.Optimizations.Annotations\SolidOpt.Services.Optimizations.Annotations.csproj">
